care/force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>This Object holds basic event informations primarly for the International WPS Service Team. SFORCE-1162</description>
    <label>WPS Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WPS Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>