care/force-app/main/default/objects/Event__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Business_Account__r.Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  Business_Account__r.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>