care/force-app/main/default/objects/Event__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <formula>TEXT(Business_Account__r.Account_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Account Tier pulled in from the Business Account record.</inlineHelpText>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>