care/force-app/main/default/objects/Event__c/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <description>Added for SFORCE-1936 - Benefit Fair Requests</description>
    <inlineHelpText>Did end users or clients express interest in more or additional services?  Please note details.</inlineHelpText>
    <label>Additional Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>