care/force-app/main/default/objects/Event__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Added for SFORCE-1936 - Benefit Fair Requests</description>
    <inlineHelpText>Include logistical notes including parking, rules for event or any other information marketing and on-site staff should know.</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>