care/force-app/main/default/objects/Event__c/fields/Adult_BUC__c.field-meta.xml
<CustomField>
    <fullName>Adult_BUC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for SFORCE-1936 - Benefit Fair Requests</description>
    <inlineHelpText>Check this box if information about Adult BUC is being provided at the event.</inlineHelpText>
    <label>Adult BUC</label>
    <type>Checkbox</type>
</CustomField>