care/force-app/main/default/objects/Event__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <inlineHelpText>Assign to Marketing contact who will review and fulfill this event.</inlineHelpText>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erin McKenna</fullName>
            </value>
            <value>
                <fullName>Jess Marble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>