care/force-app/main/default/objects/Event__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <description>SFORCE-2884
DEV - Benefit Fair reporting enhancements</description>
    <formula>IF( AND( ISPICKVAL(Event_Staff_Type__c, &quot;Careforce&quot;) , ISPICKVAL(Event_Duration__c, &quot;1-4 Hours&quot;) ),
      75, IF( AND(ISPICKVAL(Event_Staff_Type__c, &quot;Careforce&quot;), ISPICKVAL(Event_Duration__c, &quot;4+ Hours&quot;)),  150, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>