care/force-app/main/default/objects/Event__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Account for CAW Client Onsite Events, without required Benefit for Employees checked. SFORCE-1936 Benefits Fair requests.</description>
    <inlineHelpText>Plese provide the Business Account for CAW Client Onsite Events.</inlineHelpText>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WPS Events (CAW Business Account)</relationshipLabel>
    <relationshipName>WPS_Events_Business_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>