care/force-app/main/default/objects/Event__c/fields/Business_Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Billing_Address__c</fullName>
    <formula>Business_Account__r.BillingStreet &amp; BR() &amp;  
Business_Account__r.BillingCity &amp; BR() &amp;  
Business_Account__r.BillingState &amp; BR() &amp;  
Business_Account__r.BillingPostalCode &amp; BR() &amp;  
Business_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account Billing Address</label>
    <type>Text</type>
</CustomField>