care/force-app/main/default/objects/Event__c/fields/Business_Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Shipping_Address__c</fullName>
    <formula>Business_Account__r.ShippingStreet &amp; BR() 
&amp; Business_Account__r.ShippingCity &amp; BR() 
&amp; Business_Account__r.ShippingState &amp; BR()
&amp; Business_Account__r.ShippingPostalCode &amp;BR()
&amp; Business_Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account Shipping Address</label>
    <type>Text</type>
</CustomField>