care/force-app/main/default/objects/Event__c/fields/Care_Credits__c.field-meta.xml
<CustomField>
    <fullName>Care_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Care Credits is being provided at the event.</inlineHelpText>
    <label>Care Credits</label>
    <type>Checkbox</type>
</CustomField>