care/force-app/main/default/objects/Event__c/fields/Care_Select__c.field-meta.xml
<CustomField>
    <fullName>Care_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Care Select is being provided at the event.</inlineHelpText>
    <label>Tuition Discount</label>
    <type>Checkbox</type>
</CustomField>