care/force-app/main/default/objects/Event__c/fields/Client_Nuances__c.field-meta.xml
<CustomField>
    <fullName>Client_Nuances__c</fullName>
    <inlineHelpText>Are there any client nuances we should be aware of?</inlineHelpText>
    <label>Client Nuances</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>