care/force-app/main/default/objects/Event__c/fields/Common_Questions_Asked__c.field-meta.xml
<CustomField>
    <fullName>Common_Questions_Asked__c</fullName>
    <inlineHelpText>What were some of the common questions visitors asked you during the event?</inlineHelpText>
    <label>Common Questions Asked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>