care/force-app/main/default/objects/Event__c/fields/Date_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Sent__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please enter the Date the Contract was sent to the Client.</inlineHelpText>
    <label>Date Contract Sent</label>
    <type>Date</type>
</CustomField>