care/force-app/main/default/objects/Event__c/fields/Date_Fully_Executed_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Fully_Executed_Contract_Sent__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <label>Date Fully Executed Contract Sent</label>
    <type>Date</type>
</CustomField>