care/force-app/main/default/objects/Event__c/fields/Date_Invoice_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Request_Submitted__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please enter the date the Invoice request was Submitted.</inlineHelpText>
    <label>Date Invoice Request Submitted</label>
    <type>Date</type>
</CustomField>