care/force-app/main/default/objects/Event__c/fields/Date_Invoice_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Sent_to_Client__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please enter the date the Invoice was sent to the Client.</inlineHelpText>
    <label>Date Invoice Sent to Client</label>
    <type>Date</type>
</CustomField>