care/force-app/main/default/objects/Event__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please enter the date the invoice was paid by the client.</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>