care/force-app/main/default/objects/Event__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Digital service is being provided at the event.</inlineHelpText>
    <label>Digital</label>
    <type>Checkbox</type>
</CustomField>