care/force-app/main/default/objects/Event__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>End date of the event.</description>
    <inlineHelpText>Enter the end date of the event.</inlineHelpText>
    <label>End date</label>
    <type>Date</type>
</CustomField>