care/force-app/main/default/objects/Event__c/fields/Enrollment_Increase__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Increase__c</fullName>
    <description>SFORCE-2306
C@W benefit fair object improvements - part 1</description>
    <formula>IF(
Pre_Fair_Enrollment__c = 0,
0,
( Post_Show_Enrollment__c  /  Pre_Fair_Enrollment__c))</formula>
    <label>Enrollment Increase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>