care/force-app/main/default/objects/Event__c/fields/Event_Care__c.field-meta.xml
<CustomField>
    <fullName>Event_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Event Care is being provided at this event.</inlineHelpText>
    <label>Event Care</label>
    <type>Checkbox</type>
</CustomField>