care/force-app/main/default/objects/Event__c/fields/Event_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Email__c</fullName>
    <inlineHelpText>Provide email address of the main event contact.</inlineHelpText>
    <label>Event Contact Email</label>
    <type>Email</type>
</CustomField>