care/force-app/main/default/objects/Event__c/fields/Event_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Name__c</fullName>
    <inlineHelpText>Provide the full name of the event main contact.</inlineHelpText>
    <label>Event Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>