care/force-app/main/default/objects/Event__c/fields/Event_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Phone__c</fullName>
    <inlineHelpText>Provide phone number of main event contact.</inlineHelpText>
    <label>Event Contact Phone</label>
    <type>Phone</type>
</CustomField>