care/force-app/main/default/objects/Event__c/fields/Event_Country__c.field-meta.xml
<CustomField>
    <fullName>Event_Country__c</fullName>
    <description>Country of the event location.</description>
    <inlineHelpText>Enter the Country of the event location.</inlineHelpText>
    <label>Event Country</label>
    <length>120</length>
    <type>Text</type>
</CustomField>