care/force-app/main/default/objects/Event__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <description>SFORCE-2389</description>
    <inlineHelpText>Please indicate the duration of this event.</inlineHelpText>
    <label>Event Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-4 Hours</fullName>
            </value>
            <value>
                <fullName>4+ Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>