care/force-app/main/default/objects/Event__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <displayFormat>EVENT-{0000000}</displayFormat>
    <inlineHelpText>This is the unique event ID number (for reporting).</inlineHelpText>
    <label>Event ID</label>
    <type>AutoNumber</type>
</CustomField>