care/force-app/main/default/objects/Event__c/fields/Event_Staff__c.field-meta.xml
<CustomField>
    <fullName>Event_Staff__c</fullName>
    <inlineHelpText>Provide names of personnel staffing this event.</inlineHelpText>
    <label>Event Staff</label>
    <type>TextArea</type>
</CustomField>