care/force-app/main/default/objects/Event__c/fields/Event_Staff_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Staff_Type__c</fullName>
    <description>SFORCE-2884
DEV - Benefit Fair reporting enhancements</description>
    <label>Event Staff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Careforce</fullName>
            </value>
            <value>
                <fullName>BUC Caregiver</fullName>
            </value>
            <value>
                <fullName>FTE</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Sales Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>