care/force-app/main/default/objects/Event__c/fields/Event_State__c.field-meta.xml
<CustomField>
    <fullName>Event_State__c</fullName>
    <inlineHelpText>Provide the state in which the event is taking place.</inlineHelpText>
    <label>Event State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>