care/force-app/main/default/objects/Event__c/fields/Event_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Event_State_Province__c</fullName>
    <description>State/Province of the event location.</description>
    <inlineHelpText>Enter State/Province of the event location.</inlineHelpText>
    <label>Event State/Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>