care/force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <inlineHelpText>Please Select the Event Status</inlineHelpText>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Client unresponsive</fullName>
            </value>
            <value>
                <fullName>Review Call</fullName>
            </value>
            <value>
                <fullName>Price calculator approval pending</fullName>
            </value>
            <value>
                <fullName>Quote sent</fullName>
            </value>
            <value>
                <fullName>Client decline</fullName>
            </value>
            <value>
                <fullName>Agreement sent to client</fullName>
            </value>
            <value>
                <fullName>Agreement &amp; DR sent to legal</fullName>
            </value>
            <value>
                <fullName>Fully executed agreement to client</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Invoice sent to AR</fullName>
            </value>
            <value>
                <fullName>Invoice sent to client by AR</fullName>
            </value>
            <value>
                <fullName>Agreement sent to AM for filling</fullName>
            </value>
            <value>
                <fullName>Survey sent</fullName>
            </value>
            <value>
                <fullName>Coverage not available/closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>