care/force-app/main/default/objects/Event__c/fields/Event_Street__c.field-meta.xml
<CustomField>
    <fullName>Event_Street__c</fullName>
    <description>Street of the events location adress</description>
    <inlineHelpText>Enter the Street of the events location adress.</inlineHelpText>
    <label>Event Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>