care/force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <inlineHelpText>What kind of event is this? Benefit fair, health fair, wellness fair, student event, bring your kids to work day, etc.</inlineHelpText>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>