care/force-app/main/default/objects/Event__c/fields/Event_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Zip_Code__c</fullName>
    <description>Event Zip Code</description>
    <inlineHelpText>Enter the zip code of the event location.</inlineHelpText>
    <label>Event Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>