care/force-app/main/default/objects/Event__c/fields/EventCity__c.field-meta.xml
<CustomField>
    <fullName>EventCity__c</fullName>
    <description>EventCity</description>
    <inlineHelpText>Enter the city of the event location.</inlineHelpText>
    <label>Event City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>