care/force-app/main/default/objects/Event__c/fields/Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendance__c</fullName>
    <inlineHelpText>Provide expected number of client attendees.</inlineHelpText>
    <label>Expected Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>