care/force-app/main/default/objects/Event__c/fields/Expert_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Expert_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about Expert Assistance is being provided at the event.</inlineHelpText>
    <label>Expert Assistance</label>
    <type>Checkbox</type>
</CustomField>