care/force-app/main/default/objects/Event__c/fields/Fair_Type__c.field-meta.xml
<CustomField>
    <fullName>Fair_Type__c</fullName>
    <label>Fair Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>