care/force-app/main/default/objects/Event__c/fields/Family_Care_Hub__c.field-meta.xml
<CustomField>
    <fullName>Family_Care_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Care Hub</label>
    <type>Checkbox</type>
</CustomField>