care/force-app/main/default/objects/Event__c/fields/Food_Provided__c.field-meta.xml
<CustomField>
    <fullName>Food_Provided__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Will food be provided at the event ? Please describe.</inlineHelpText>
    <label>Food Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>