care/force-app/main/default/objects/Event__c/fields/Group_Notes__c.field-meta.xml
<CustomField>
    <fullName>Group_Notes__c</fullName>
    <label>Group Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>