care/force-app/main/default/objects/Event__c/fields/HomePay__c.field-meta.xml
<CustomField>
    <fullName>HomePay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about HomePay is being provided at the event.</inlineHelpText>
    <label>HomePay</label>
    <type>Checkbox</type>
</CustomField>