care/force-app/main/default/objects/Event__c/fields/Hours_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Event__c</fullName>
    <inlineHelpText>Provide requested start/end time of event, i.e. 1:00-3:00 pm EST</inlineHelpText>
    <label>Hours of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>