care/force-app/main/default/objects/Event__c/fields/In_Home_Child_BUC__c.field-meta.xml
<CustomField>
    <fullName>In_Home_Child_BUC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about In-home Child BUC is being provided.</inlineHelpText>
    <label>In-Home Child BUC</label>
    <type>Checkbox</type>
</CustomField>