care/force-app/main/default/objects/Event__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Business_Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Industry pulled in from the Business Account.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>