care/force-app/main/default/objects/Event__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if information about International services is being provided at this event.</inlineHelpText>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>