care/force-app/main/default/objects/Event__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>