care/force-app/main/default/objects/Event__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show, if this is an active event or not.</description>
    <inlineHelpText>Check, if this event is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>