care/force-app/main/default/objects/Event__c/fields/Issues_or_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Issues_or_Concerns__c</fullName>
    <inlineHelpText>Did clients or end users have any issues or concerns?  Please note details.</inlineHelpText>
    <label>Issues or Concerns?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>