care/force-app/main/default/objects/Event__c/fields/Location_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Event__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide details about the location of the event.</inlineHelpText>
    <label>Location of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>