care/force-app/main/default/objects/Event__c/fields/Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Materials_Sent__c</fullName>
    <inlineHelpText>Please provide description of collateral, swag, and raffles sent to event.</inlineHelpText>
    <label>Materials Sent</label>
    <type>TextArea</type>
</CustomField>