care/force-app/main/default/objects/Event__c/fields/Materials_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Materials_Ship_Date__c</fullName>
    <inlineHelpText>Date all required materials are shipped to event.</inlineHelpText>
    <label>Materials Ship Date</label>
    <type>Date</type>
</CustomField>