care/force-app/main/default/objects/Event__c/fields/No_of_Children_Ages_0_to_2__c.field-meta.xml
<CustomField>
    <fullName>No_of_Children_Ages_0_to_2__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide # of children ages 0 to 2 attending</inlineHelpText>
    <label>No. of Children Ages 0 to 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>