care/force-app/main/default/objects/Event__c/fields/No_of_Children_Ages_3__c.field-meta.xml
<CustomField>
    <fullName>No_of_Children_Ages_3__c</fullName>
    <description>SFORCE-1845
Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide # of children ages 3 to 7 attending</inlineHelpText>
    <label>No. of Children Ages 3+</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>