care/force-app/main/default/objects/Event__c/fields/No_of_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>No_of_Staff_Required__c</fullName>
    <description>SFORCE-1845
Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide # of people required to staff the event.</inlineHelpText>
    <label>No. of Staff Required</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>