care/force-app/main/default/objects/Event__c/fields/Number_of_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visitors__c</fullName>
    <inlineHelpText>Provide number of visitors who attended the event.</inlineHelpText>
    <label>Number of Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>