care/force-app/main/default/objects/Event__c/fields/Onsite_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Email__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide the onsite contact email.</inlineHelpText>
    <label>Onsite Contact Email</label>
    <type>Email</type>
</CustomField>