care/force-app/main/default/objects/Event__c/fields/Onsite_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Name__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide the onsite contact name</inlineHelpText>
    <label>Onsite Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>