care/force-app/main/default/objects/Event__c/fields/Onsite_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Phone__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>Please provide the onsite contact phone number.</inlineHelpText>
    <label>Onsite Contact Phone</label>
    <type>Phone</type>
</CustomField>