care/force-app/main/default/objects/Event__c/fields/Onsites_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Onsites_in_Contract__c</fullName>
    <inlineHelpText>How many on-sites are contracted?</inlineHelpText>
    <label>On-sites in Contract</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>