care/force-app/main/default/objects/Event__c/fields/Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost__c</fullName>
    <inlineHelpText>Include any other costs incurred at this event.</inlineHelpText>
    <label>Other Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>