care/force-app/main/default/objects/Event__c/fields/Other_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendors__c</fullName>
    <inlineHelpText>What other vendors were at the event?</inlineHelpText>
    <label>Other Vendors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>