care/force-app/main/default/objects/Event__c/fields/Parking_Location__c.field-meta.xml
<CustomField>
    <fullName>Parking_Location__c</fullName>
    <description>SFORCE-1845 Event Care process transition to Salesforce</description>
    <inlineHelpText>If Parking is Selected as Yes, Mention Parking Location</inlineHelpText>
    <label>Parking Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>