care/force-app/main/default/objects/Event__c/fields/Personal_Network__c.field-meta.xml
<CustomField>
    <fullName>Personal_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2496
Add personal network option to services within WPS event request form</description>
    <label>Personal Network</label>
    <type>Checkbox</type>
</CustomField>