care/force-app/main/default/objects/Event__c/fields/Photos_Attached__c.field-meta.xml
<CustomField>
    <fullName>Photos_Attached__c</fullName>
    <inlineHelpText>Please attach photos - check this box when attached.</inlineHelpText>
    <label>Photos Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>