care/force-app/main/default/objects/Event__c/fields/Post_Show_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Post_Show_Enrollment__c</fullName>
    <inlineHelpText>How many employees enrolled in Care@Work benefits post event?</inlineHelpText>
    <label>Attributed Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>