care/force-app/main/default/objects/Event__c/fields/Pre_Fair_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Pre_Fair_Enrollment__c</fullName>
    <inlineHelpText>Number of client employees enrolled in Care@Work benefits prior to event?</inlineHelpText>
    <label>Pre-Fair Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>