care/force-app/main/default/objects/Event__c/fields/Printing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Printing_Cost__c</fullName>
    <inlineHelpText>Provide actual cost for all printed materials required for this event.</inlineHelpText>
    <label>Printing Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>